# obc-ingestion-core

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  Changelog.md  Makefile  README.md  SOURCE_CODE_INDEX.md  commit_message.txt  config.yaml  doc.md  obc-ingestion-core.code-workspace  pyproject.toml  pytest.ini  scafold.sh  setup.py
.github/workflows/: makefile.yml  publish.yml
db/: herpai.db  openbiocure-catalog.db
docs/: BugTracker.md  GettingStarted.md  QuickReference.md
examples/: 01_basic_todo.py  02_yaml_config.py  03_app_config.py  04_custom_startup.py  05_database_operations.py  06_autodiscovery.py  07_multi_config.py  README.md  app_config_example.py  autodiscovery_example.py  configured_todo_example.py  todo_example.py
examples/config/: config.yaml  memory_sqlite_config.yaml  sqlite_config.yaml
examples/domain/: todo_entity.py
examples/repository/: todo_repository.py
herpai_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
herpailib/.github/workflows/: publish.yml
herpailib/configuration/: app_config.py
herpailib/entities/: todo.py
herpailib/infrastructure/db/: base_entity.py  base_model.py  session.py
herpailib/infrastructure/repository/: __init__.py  base_entity.py  base_repository.py  interfaces.py
herpailib/repository/: base.py
herpailib/scripts/: commit-msg-hook.sh
herpailib/services/: todo.py
infrastructure/: logger.py
infrastructure/db/: session.py
obc_ingestion_core/: __init__.py
obc_ingestion_core/config/: app_config.py  dataclass_config.py
obc_ingestion_core/core/: configuration_startup_task.py  engine.py  interfaces.py  service_collection.py  service_scope.py  startup_task_executor.py  type_finder.py
obc_ingestion_core/data/: __init__.py  db_context.py  repository.py
openbiocure_corelib/: __init__.py
openbiocure_corelib/config/: app_config.py  dataclass_config.py  environment.py  settings.py  yaml_config.py
openbiocure_corelib/core/: __init__.py  configuration_startup_task.py  engine.py  interfaces.py  service_collection.py  service_scope.py  singleton.py  startup_task.py  startup_task_executor.py  type_finder.py
openbiocure_corelib/data/: db_context.py  db_context_startup_task.py  entity.py  repository.py  specification.py
repository/: base.py
src/: __init__.py
src/config/: settings.py  yaml_config.py
src/core/: __init__.py  app_config_startup.py  configuration_startup_task.py  dependency.py  engine.py  engine_update.py  engine_update_autodiscovery.py  exceptions.py  interfaces.py  service_collection.py  singleton.py  startup.py  startup_task.py  startup_task_executor.py
src/data/: __init__.py  db_context.py  db_context_update.py  db_context_with_appconfig.py  repository.py
tests/: README.md  app_config_tests.py  conftest.py  test_smoke.py
tests/integration/: test_app_config_integration.py  test_db_context.py  test_engine_integration.py  test_full_integration.py
tests/mocks/: __init__.py  mock_implementations.py
tests/repository/: conftest.py  test_base.py  test_todo.py
tests/unit/: test_config.py  test_engine.py  test_repository.py  test_startup.py
