[build-system]
requires = [ "setuptools>=42", "wheel" ]
build-backend = "setuptools.build_meta"


[project]
name = "openbiocure_corelib"
version = "3.1.0"
description = "OpenBioCure_CoreLib is the foundational core library for the HerpAI platform. It provides shared infrastructure components, configuration management, logging utilities, database session handling, and the repository pattern used across HerpAI agents and services."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
"sqlalchemy> = 2.0.0",
"pyyaml> = 6.0",
"aiosqlite> = 0.17.0",
"greenlet> = 2.0.0"
]


[project.license]
text = "MIT"


[[project.authors]]
name = "OpenBioCure Contributors"
email = "openbiocure@gmail.com"


[project.optional-dependencies]
dev = [
"pytest> = 7.0.0",
"pytest-asyncio> = 0.18.0",
"pytest-cov> = 4.0.0",
"black",
"isort",
"mypy",
"flake8> = 7.0.0",
"pre-commit"
]


[tool.setuptools.package-dir]
"" = "."


[tool.setuptools.packages.find]
where = [ "." ]
include = [ "openbiocure_corelib*" ]


[tool.black]
line-length = 88
target-version = [ "py39" ]


[tool.isort]
profile = "black"
line_length = 88
