[build-system]
requires = [ "setuptools>=42", "wheel" ]
build-backend = "setuptools.build_meta"


[project]
name = "obc-ingestion-core"
version = "3.1.0"
description = "OBC Ingestion Core is the foundational library for data ingestion and processing in the OpenBioCure platform. It provides shared infrastructure components, configuration management, logging utilities, database session handling, and the repository pattern for data ingestion workflows."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
"sqlalchemy>=2.0.0",
"pyyaml>=6.0",
"aiosqlite>=0.17.0",
"greenlet>=2.0.0"
]


[project.license]
text = "MIT"


[[project.authors]]
name = "OpenBioCure Contributors"
email = "openbiocure@gmail.com"


[project.optional-dependencies]
dev = [
"pytest>=7.0.0",
"pytest-asyncio>=0.18.0",
"pytest-cov>=4.0.0",
"black",
"isort",
"mypy",
"flake8>=7.0.0",
"pre-commit"
]


[tool.setuptools.package-dir]
"" = "."


[tool.setuptools.packages.find]
where = [ "." ]
include = [ "obc_ingestion_core*" ]


[tool.black]
line-length = 88
target-version = [ "py39" ]


[tool.isort]
profile = "black"
line_length = 88
